<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_d_home"
            android:checked="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_d_latest"
            android:title="@string/menu_latest" />
        <item
            android:id="@+id/nav_most"
            android:icon="@drawable/ic_d_popular"
            android:title="@string/menu_most" />
        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/ic_d_cat"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_d_fav"
            android:title="@string/menu_favorite" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_d_pofile"
            android:checkable="false"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_d_setting"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_d_share"
            android:checkable="false"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_d_login"
            android:checkable="false"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_d_logout"
            android:checkable="false"
            android:title="@string/menu_logout" />

    </group>

 </menu>
