<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/editText_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/name_login"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/editText_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/editText_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/password_login"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/editText_phoneNo_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#00000000"
                    android:hint="@string/phone_login"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_submit"
                fontPath="myfonts/Poppins-SemiBold_0.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_login_background"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>