<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/comment_bg">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/vertical_courses_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_main"
        android:layout_margin="4dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lyt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/comment_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/no_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_comment_found"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/fab"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_comment" />

    <LinearLayout
        android:id="@+id/linearLayout_all_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/comment_bg"
        android:orientation="horizontal"
        android:visibility="gone">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/app_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toStartOf="@+id/imageView_dialogBox_comment"
                android:background="@color/comment_bg"
                android:gravity="bottom"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_dialogbox_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="@string/please_enter_comment"
                    android:maxLines="10"
                    android:minLines="1"
                    android:padding="3dp"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/line" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imageView_dialogBox_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_send" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>